# Vocal-agent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Containerfile  README.md  container-setup.ps1  openclaw-hooks-message-processing.md  plan.md  ptt.py  ptt.toml  run.ps1  setup.ps1  setup.sh  tempo service-fix.md  tts.toml
.cargo/: config.toml
Dirty_poc/: win_file_to_audio.py  wsl_audio_to_file.py
agent_service/: Cargo.toml  config.toml
agent_service/src/: lib.rs  main.rs
agent_service/src/application/: config.rs  mod.rs  use_cases.rs
agent_service/src/domain/: models.rs  ports.rs
agent_service/src/infra_asr_http/: client.rs
agent_service/src/infra_openclaw_http/: client.rs
agent_service/src/infra_tts_http/: client.rs
agent_service/src/infra_web/: api.rs
alignment-service/: README.md
alignment-service/application/: Cargo.toml
alignment-service/config/: default.toml  development.toml  production.toml  test.toml
alignment-service/configuration/: Cargo.toml
alignment-service/domain/: Cargo.toml
alignment-service/grpc/: Cargo.toml  build.rs
alignment-service/grpc/src/: lib.rs
alignment-service/infra-alignment/: Cargo.toml
alignment-service/infra-alignment/src/: lib.rs
alignment-service/proto/: alignment.proto
alignment-service/setup/: Cargo.toml
alignment-service/setup/src/: app.rs
application/src/: error.rs  pipeline.rs
application/tests/: session_pipeline.rs
asr/: Cargo.toml  config.toml
asr-service/: Cargo.toml  README.md
asr-service/application/: Cargo.toml
asr-service/application/src/: error.rs  lib.rs
asr-service/application/src/command/: mod.rs  transcribe_audio.rs
asr-service/application/src/dto/: asr.rs  mod.rs
asr-service/application/src/usecase/: asr.rs  mod.rs
asr-service/application/tests/: session_transcription.rs
asr-service/asr-service/: Cargo.toml
asr-service/asr-service/config/: development.toml
asr-service/config/: default.toml  development.toml  production.toml  test.toml
asr-service/configuration/src/: lib.rs
asr-service/domain/: Cargo.toml
asr-service/domain/src/: entity.rs  port.rs
asr-service/grpc/: Cargo.toml  build.rs
asr-service/grpc/src/: lib.rs
asr-service/infra/: Cargo.toml
asr-service/infra-alignment/: Cargo.toml
asr-service/infra-alignment/src/: lib.rs
asr-service/infra-asr-whisper/: Cargo.toml
asr-service/infra-asr-whisper/src/: lib.rs
asr-service/infra-audio/src/: lib.rs
asr-service/infra-streaming/: Cargo.toml
asr-service/proto/: asr.proto
asr-service/setup/: Cargo.toml
asr-service/setup/src/: app.rs  lib.rs  pipeline_loader.rs
asr-service/src/: main.rs
asr-service/tests/: common.rs  http_transcribe.rs
asr/src/: lib.rs  main.rs
asr/src/application/: config.rs  mod.rs  model_resolver.rs  pipeline_registry.rs  service.rs  use_cases.rs
asr/src/domain/: models.rs  pipeline.rs  ports.rs  value_objects.rs
asr/src/infra_aha/: transcriber.rs
asr/src/infra_cli/: cli.rs
asr/src/infra_local/: provider.rs
asr/src/infra_openclaw/: post_processor.rs
asr/src/infra_web/: api.rs
audio-service/application/: Cargo.toml
audio-service/application/src/: error.rs  lib.rs
audio-service/application/src/command/: factory.rs  mod.rs  transform_audio.rs
audio-service/application/src/dto/: mod.rs  transform_audio.rs
audio-service/application/src/usecase/: mod.rs  transform_audio.rs
audio-service/application/tests/: session_transform.rs
audio-service/infra/: Cargo.toml
audio-service/infra/src/: audio.rs  lib.rs
audio-service/setup/: Cargo.toml
audio-service/setup/src/: app.rs
config/: default.toml  development.toml  production.toml  test.toml
configuration/src/: lib.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs
http/src/handlers/: asr.rs  mod.rs
infra/: Cargo.toml
infra-alignment/: Cargo.toml
infra-asr-whisper/: Cargo.toml
infra-audio/: Cargo.toml
infra/src/: alignment.rs  lib.rs  whisper.rs
local-run/: Cargo.toml
openclaw/: openclaw-http-api-agent-guide.md  openclaw.json
orchestration-service/application/: Cargo.toml
orchestration-service/application/src/: pipeline.rs
orchestration-service/application/src/command/: factory.rs
orchestration-service/application/src/dto/: asr.rs
orchestration-service/application/src/usecase/: asr.rs
orchestration-service/application/tests/: session_pipeline.rs
orchestration-service/configuration/: Cargo.toml
orchestration-service/configuration/src/: lib.rs
orchestration-service/infra/: Cargo.toml
orchestration-service/infra-alignment/: Cargo.toml
orchestration-service/infra-alignment/src/: lib.rs
orchestration-service/infra-asr-whisper/: Cargo.toml
orchestration-service/infra-asr-whisper/src/: lib.rs
orchestration-service/infra-audio/: Cargo.toml
orchestration-service/infra-audio/src/: lib.rs
orchestration-service/infra-streaming/: Cargo.toml
orchestration-service/infra-tempo/: Cargo.toml
orchestration-service/infra-tempo/src/: lib.rs
orchestration-service/infra-tts-rest/: Cargo.toml
orchestration-service/infra-tts-rest/src/: lib.rs
orchestration-service/infra/src/: audio.rs  diagnostic.rs  lib.rs  snapshot.rs  swap_tts_audio.rs
orchestration-service/setup/: Cargo.toml
orchestration-service/setup/src/: app.rs  lib.rs
ptt/: __init__.py  __main__.py  config.py  hotkeys.py  openclaw.py  recorder.py  requirements.txt  transcriber.py
scripts/: transcribe_wav.py
setup/: Cargo.toml
setup/src/: pipeline_loader.rs
shared_rs/: Cargo.toml
tts/: Cargo.toml
tts/src/: lib.rs  main.rs
tts/src/application/: config.rs  model_resolver.rs  pipeline_registry.rs  use_cases.rs
tts/src/domain/: mod.rs  models.rs  pipeline.rs  ports.rs  value_objects.rs
tts/src/infra_cli/: cli.rs
tts/src/infra_hf/: provider.rs
tts/src/infra_local/: provider.rs
tts/src/infra_qwen3/: engine.rs  engine_clone.rs  engine_speaker.rs  mapping.rs  mod.rs
tts/src/infra_web/: api.rs
tts/voices/justamon/: text.txt
tts_python/: __main__.py  config.py  requirements.txt
tts_server/: __init__.py  __main__.py  config.py  model.py  server.py
vocal-features/: Cargo.toml
(+202 files in other folders)
