[package]
name = "agent_service"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dep:axum", "dep:tokio"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
clap = { version = "4", features = ["derive"] }

axum = { version = "0.8", features = ["multipart", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
