[package]
name = "asr-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
whisper-runtime = ["asr-setup/whisper-runtime"]
whisper-cuda = ["whisper-runtime", "asr-setup/whisper-cuda"]
whisper-vulkan = ["whisper-runtime", "asr-setup/whisper-vulkan"]
whisper-openblas = ["whisper-runtime", "asr-setup/whisper-openblas"]

[dependencies]
asr-configuration = { path = "../configuration" }
asr-setup = { path = "../setup" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "asr-service"
path = "src/main.rs"

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
rustycog-config = { workspace = true }
rustycog-testing = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
