[package]
name = "asr"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared_rs" }
aha = { git = "https://github.com/jhqxxx/aha", features = ["cuda"] }
aha_openai_dive = { version = "1.4", features = ["stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Pin candle to 0.9.1 — aha's match on DType is not exhaustive for 0.9.2+
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"
