[package]
name = "asr-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
whisper-runtime = ["dep:asr-infra-asr-whisper"]
whisper-cuda = ["whisper-runtime", "asr-infra-asr-whisper/whisper-cuda"]
whisper-vulkan = ["whisper-runtime", "asr-infra-asr-whisper/whisper-vulkan"]
whisper-openblas = ["whisper-runtime", "asr-infra-asr-whisper/whisper-openblas"]
wav2vec2-runtime = ["dep:asr-infra-alignment"]
wav2vec2-cuda = ["wav2vec2-runtime", "asr-infra-alignment/cuda"]

[dependencies]
asr-application = { path = "../application" }
asr-configuration = { path = "../configuration" }
asr-domain = { path = "../domain" }
asr-http_server = { path = "../http" }
asr-infra-alignment = { path = "../infra-alignment", optional = true }
asr-infra-audio = { path = "../infra-audio" }
asr-infra-asr-whisper = { path = "../infra-asr-whisper", optional = true }
anyhow = { workspace = true }
rustycog-command = { workspace = true }
rustycog-config = { workspace = true }
rustycog-http = { workspace = true }
tracing = { workspace = true }
