[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli", "hub", "cuda"]
cli = ["dep:clap"]
web = ["dep:axum", "dep:tokio"]
cuda = ["qwen3-tts/cuda"]
flash-attn = ["qwen3-tts/flash-attn"]
metal = ["qwen3-tts/metal"]
hub = ["qwen3-tts/hub"]

[dependencies]
shared = { path = "../shared_rs" }
qwen3-tts = { git = "https://github.com/TrevorS/qwen3-tts-rs", features = ["cuda", "hub"]}

# Candle ML framework
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
