[package]
name = "alignment-grpc_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
alignment-application = { path = "../application" }
alignment-domain = { path = "../domain" }
anyhow = { workspace = true }
prost = { workspace = true }
rustycog-command = { workspace = true }
rustycog-config = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
