[package]
name = "alignment-infra-alignment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alignment-domain = { path = "../domain" }
async-trait = { workspace = true }
wav2vec2-rs = { path = "../../wav2vec2-rs" }

[features]
default = []
cuda = ["wav2vec2-rs/cuda"]
