[package]
name = "alignment-infra-alignment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alignment-domain = { path = "../domain" }
async-trait = { workspace = true }
wav2vec2-rs = { workspace = true }

[features]
default = ["onnx"]
onnx = ["wav2vec2-rs/onnx"]
wgpu-dp = ["wav2vec2-rs/wgpu-dp"]
cuda-dp = ["wav2vec2-rs/cuda-dp"]
# ONNX inference on CUDA + BP/DP on WGPU.
onnx-wgpu-bp = ["onnx", "wgpu-dp"]
