[package]
name = "asr-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asr-domain = { path = "../domain" }
async-trait = { workspace = true }
rustycog-command = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
