[package]
name = "asr-infra-alignment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asr-domain = { path = "../domain" }
async-trait = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda"]
