[package]
name = "asr-infra-asr-whisper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
asr-domain = { path = "../domain" }
async-trait = { workspace = true }
whisper-rs = { workspace = true }

[features]
default = []
whisper-cuda = ["whisper-rs/cuda"]
whisper-vulkan = ["whisper-rs/vulkan"]
whisper-openblas = ["whisper-rs/openblas"]
