[package]
name = "asr-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
whisper-runtime = ["asr-infra-asr-whisper/whisper-runtime"]
whisper-cuda = ["asr-infra-asr-whisper/whisper-cuda"]
whisper-vulkan = ["asr-infra-asr-whisper/whisper-vulkan"]
whisper-openblas = ["asr-infra-asr-whisper/whisper-openblas"]

[dependencies]
asr-application = { path = "../application" }
asr-configuration = { path = "../configuration" }
asr-domain = { path = "../domain" }
asr-grpc_server = { path = "../grpc" }
asr-infra-asr-whisper = { path = "../infra-asr-whisper" }
anyhow = { workspace = true }
rustycog-command = { workspace = true }
rustycog-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
