[package]
name = "orchestration-configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustycog-config = { workspace = true }
rustycog-logger = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
