[package]
name = "orchestration-infra-alignment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestration-domain = { path = "../domain" }
alignment-grpc_server = { path = "../../alignment-service/grpc" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
