[package]
name = "orchestration-infra-asr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestration-domain = { path = "../domain" }
asr-grpc_server = { path = "../../asr-service/grpc" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
