[package]
name = "orchestration-infra-streaming"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestration-application = { path = "../application" }
orchestration-domain = { path = "../domain" }
axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
