[package]
name = "orchestration-infra-tts-rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestration-domain = { path = "../domain" }
async-trait = { workspace = true }
hound = "3.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
